# gmx_tracker

./: .gitignore  README.md  pyproject.toml
gmx_tracker/: __main__.py  cli.py  configs_parsing.py  rundir_analysis.py  simulation_handler.py  track.py
gmx_tracker/src/: simulation_handler.py
tests/: test_fileparsing.py
